# heatwave-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  debug_vectors.py  main.py  pyproject.toml  test_pdf_demo.py
examples/: advanced_rag.py  basic_usage.py  document_processing.py
heatwave_rag/: __init__.py  core.py  database.py  document_processor.py  embeddings.py  models.py  rag.py  schemas.py  types.py  vector_search.py
scripts/: check_mysql_version.py  recreate_table.py  test_pdf_demo.py
tests/: __init__.py  conftest.py  test_database.py  test_document_processor.py  test_embeddings.py  test_vector_search.py
